feat : new add and identify routes args and returns
